<resources>
    <string name="app_name">Crypto Compare</string>
    <string name="ethereum">Ethereum</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="convert">Convert</string>
    <string name="enter_your_amount">Enter your amount</string>
    <string name="view_ethereum">View Ethereum</string>
    <string name="view_bitcoin">View Bitcoin</string>
    <string name="loading">Loading...</string>
    <string name="create_card">Create Card</string>
    <string name="etherum_or_bitcoin">etherum or bitcoin</string>
</resources>
