<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andela.chuks.cryptocompare.BitcoinEthereum">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/etherum_or_bitcoin"
                    android:src="@drawable/bitcoin_final" />

                <TextView
                    android:id="@+id/textSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:typeface="monospace" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="211dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="40dp" />

                <Button
                    android:id="@+id/convertButton"
                    style="@style/buttonCurrencyStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="convert"
                    android:text="@string/convert" />

                <TextView
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:onClick="convertEthereum"
                    android:text="@string/view_ethereum"
                    android:textColor="@color/white" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.CardView>

</LinearLayout>
