<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andela.chuks.cryptocompare.Conversion">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/etherum_or_bitcoin"
                    android:src="@drawable/bitcoin_final" />

                <TextView
                    android:id="@+id/text_set_convert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:typeface="monospace" />

                <Spinner
                    android:id="@+id/spinner_convert"
                    android:layout_width="211dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" />

                <EditText
                    android:id="@+id/edit_currency"
                    style="@style/editCurrencyStyle"
                    android:hint="@string/enter_your_amount" />

                <Button
                    android:id="@+id/convert_button"
                    style="@style/buttonCurrencyStyle"
                    android:onClick="createCard"
                    android:text="@string/create_card" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.CardView>

</LinearLayout>
